# carcimaid

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  synthase-config.json
.github/workflows/: ci.yml  pages.yml  pr-title.yml  release.yml
corpus/: ATTRIBUTION.md
corpus/architecture/mermaid/: SOURCES.tsv  architecture_016.mmd  demo-architecture_000.mmd  demo-architecture_001.mmd  demo-architecture_002.mmd  demo-architecture_003.mmd  demo-architecture_004.mmd  demo-architecture_005.mmd  demo-architecture_006.mmd  demo-architecture_008.mmd  demo-architecture_010.mmd
corpus/block/mermaid/: SOURCES.tsv  demo-block_000.mmd  demo-block_001.mmd  demo-block_002.mmd  demo-block_003.mmd  demo-block_004.mmd  demo-block_006.mmd  demo-block_008.mmd  demo-block_009.mmd  demo-block_010.mmd  demo-block_011.mmd
corpus/c4/mermaid/: SOURCES.tsv  demo-c4context_004.mmd
corpus/class/mermaid/: SOURCES.tsv  classDiagram-elk-v3_032.mmd  classDiagram-handDrawn-v3_057.mmd  classDiagram-neo_004.mmd  classDiagram-v2_024.mmd  classDiagram-v2_035.mmd  classDiagram-v2_036.mmd  classDiagram-v2_037.mmd  classDiagram_020.mmd  classDiagram_021.mmd  classDiagram_022.mmd  classDiagram_023.mmd  classDiagram_027.mmd  demo-classchart_000.mmd  demo-classchart_007.mmd  demo-classchart_012.mmd  demo-classchart_013.mmd  demo-classchart_014.mmd  demo-classchart_015.mmd  demo-classchart_016.mmd  demo-classchart_017.mmd  demo-classchart_018.mmd
corpus/er/mermaid/: SOURCES.tsv  demo-er-multiline_000.mmd  demo-er-multiline_001.mmd  demo-er_000.mmd  demo-er_002.mmd  demo-er_003.mmd  demo-error_000.mmd  demo-error_001.mmd  erDiagram-neo-look_000.mmd  erDiagram-neo-look_002.mmd  erDiagram-neo-look_003.mmd  erDiagram-neo-look_004.mmd  erDiagram-neo-look_006.mmd  erDiagram-neo-look_007.mmd  erDiagram-neo-look_008.mmd  erDiagram-unified_028.mmd  erDiagram_020.mmd
corpus/flowchart/: decision.mmd  lr-edge-styles.mmd  shapes.mmd  simple-chain.mmd
corpus/flowchart/mermaid/: SOURCES.tsv  demo-dataflowchart_000.mmd  demo-flowchart_000.mmd  demo-flowchart_001.mmd  demo-flowchart_002.mmd  demo-flowchart_003.mmd  demo-flowchart_004.mmd  demo-flowchart_005.mmd  demo-flowchart_006.mmd  demo-flowchart_007.mmd  demo-flowchart_008.mmd  demo-flowchart_009.mmd  demo-flowchart_010.mmd  demo-flowchart_011.mmd  demo-flowchart_012.mmd  demo-flowchart_014.mmd  demo-flowchart_015.mmd  demo-flowchart_016.mmd  demo-flowchart_017.mmd  demo-flowchart_018.mmd  demo-flowchart_019.mmd  demo-flowchart_020.mmd  demo-flowchart_021.mmd  (+109 more)
crates/carcimaid/: Cargo.toml
crates/carcimaid-cli/: Cargo.toml
crates/carcimaid-cli/src/: main.rs
crates/carcimaid/examples/: measure.rs  sgtest.rs
crates/carcimaid/src/: error.rs  ir.rs  layout.rs  lib.rs  render.rs  style.rs  text.rs
crates/carcimaid/src/layout/: sequence.rs
crates/carcimaid/src/parser/: flowchart.rs  mod.rs  sequence.rs
crates/carcimaid/src/render/: markers.rs  seq_defs.rs  sequence.rs
crates/compliance/: Cargo.toml
crates/compliance/src/: corpus.rs  lib.rs  main.rs  oracle.rs  svgdiff.rs
crates/roughr/: Cargo.toml  README.md
crates/roughr/src/: core.rs  fillers.rs  generator.rs  lib.rs  math.rs  pathdata.rs  renderer.rs
docs/: ROADMAP.md
tools/: build_viewer.py  harvest_corpus.py
(+201 files in other folders)
