[package]
name = "compliance"
description = "Compliance harness: diff carcimaid's SVG against the official mermaid CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "compliance"
path = "src/lib.rs"

[[bin]]
name = "compliance"
path = "src/main.rs"

[dependencies]
carcimaid.workspace = true
roxmltree = "0.20"
